add help text on qr code export modal

--- a/src/templates/export-menu.html
+++ b/src/templates/export-menu.html
@@ -64,6 +64,7 @@
         </button>
       </div>
       <div class='modal-body'>
+        <p class='smallgray'>{{ 'The QR code image will encode the URL of the resource in view mode. It is scannable by any device recognizing QR codes.'|trans }}</p>
         {# SIZE #}
         <div class='d-flex justify-content-between mb-2'>
           <div>
