--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -22,7 +22,7 @@
     {% endif %}
 
     {# INSERT IN TEXT in edit mode for audio #}
-    {% if ext matches '/(acc|flac|mp3|ogg|opus|wav)$/i' %}
+    {% if ext matches '/(aac|flac|mp3|ogg|opus|wav)$/i' %}
       <button type='button' class='dropdown-item' data-action='insert-audio-in-body' data-name='{{ upload.real_name|e('html_attr') }}' data-storage='{{ upload.storage }}' data-link='{{ upload.long_name|e('html_attr') }}' data-uploadid='{{ upload.id }}'>
         <i class='fas fa-fw fa-volume-low mr-1'></i>{{ 'Insert in text at cursor position'|trans }}
       </button>
