--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -6,7 +6,7 @@
 {% if Entity.Users.userData.use_markdown or App.Request.query.get('editor') == 'md' or Entity.entityData.content_type == '2' %}
   {% set editor = 'md' %}
 {% endif %}
-{% if App.Request.query.get('editor') == 'tiny' %}
+{% if App.Request.query.get('editor') == 'tiny' or Entity.entityData.content_type == '1' %}
   {% set editor = 'tiny' %}
 {% endif %}
 
