display stats about uploaded files to sysadmin

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -517,7 +517,18 @@
 
 {# TAB 8 UPLOADS #}
 <div data-tabcontent='8' hidden>
-  <h3 class='p-2 pl-3 section-title'>{{ 'Uploaded files configuration'|trans }}</h3>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Information'|trans }}</h3>
+  <div class='pl-3 mt-2 mb-5'>
+    {% if uploadsStats.count_null_hash > 0 %}
+      {{ 'Warning: %d files are missing a hash value. Fix it with %sbin/console uploads:check%s command.'|format(uploadsStats.count_null_hash, '<code>', '</code>')|msg('warning', false) }}
+    {% endif %}
+    {% if uploadsStats.count_null_filesize > 0 %}
+      {{ 'Warning: %d files are missing a filesize value. Fix it with %sbin/console uploads:check%s command.'|format(uploadsStats.count_null_filesize, '<code>', '</code>')|msg('warning', false) }}
+    {% endif %}
+    {{ 'This instance has %d files uploaded using %s of disk space.'|trans|format(uploadsStats.count_all, uploadsStats.filesize_all|formatBytes) }}
+  </div>
+
+  <h3 class='p-2 pl-3 section-title'>{{ 'Configuration'|trans }}</h3>
 
   <div class='pl-3 mt-2 mb-5'>
 
