add a sysconfig setting to prevent users from changing their identity
* new setting "allow_users_change_identity" defaults to 1
* if disabled, only a Sysadmin can modify first name, last name or email
  of a user
* Admins do not have special rights either, they are considered normal
  users
* prevent changes in web ui on profile and editusers, and in
  Users->update()
fix #4987

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -124,6 +124,8 @@
     </div>
     <hr>
 
+    {% include 'binary-setting.html' with {'label': 'Allow users to change their first name, last name, or email address'|trans, 'slug': 'allow_users_change_identity', 'help': 'When disabled, only a Sysadmin will be allowed to modify these parameters.'} %}
+
   </div>
 
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Registration and authentication configuration'|trans }}</h3>
