--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -136,10 +136,10 @@
                   </div>
                 </td>
                 <td data-label='{{ 'Firstname'|trans }}'>
-                  <span class='hl-hover-gray p-1 rounded malleableColumn' data-endpoint='users' data-id='{{ user.userid }}' data-target='firstname'>{{ user.firstname }}</span>
+                  <span class='p-1 rounded {{ App.Users.userData.is_sysadmin == '1' or App.Config.configArr.allow_users_change_identity == '1' ? 'malleableColumn hl-hover-gray' }}' data-endpoint='users' data-id='{{ user.userid }}' data-target='firstname'>{{ user.firstname }}</span>
                 </td>
                 <td data-label='{{ 'Lastname'|trans }}'>
-                  <span class='hl-hover-gray p-1 rounded malleableColumn' data-endpoint='users' data-id='{{ user.userid }}' data-target='lastname'>{{ user.lastname }}</span>
+                  <span class='p-1 rounded {{ App.Users.userData.is_sysadmin == '1' or App.Config.configArr.allow_users_change_identity == '1' ? 'malleableColumn hl-hover-gray' }}' data-endpoint='users' data-id='{{ user.userid }}' data-target='lastname'>{{ user.lastname }}</span>
                 </td>
                 <td data-label='{{ 'Email'|trans }}'>
                   <span class='p-1 rounded {{ App.Users.userData.is_sysadmin == '1' ? 'hl-hover-gray malleableColumn' }}' data-ma-type='email' data-endpoint='users' data-id='{{ user.userid }}' data-target='email'>{{ user.email }}</span>
