--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -327,7 +327,7 @@
 
       <div class='d-flex justify-content-between'>
         <label for='email' class='col-form-label'>{{ 'Email'|trans }}</label>
-        <input class='form-control col-md-3' name='email' id='email' type='email' value='{{ App.Users.userData.email|e('html_attr') }}' />
+        <input class='form-control col-md-3' {{ App.Config.configArr.allow_users_change_identity == '0' ? 'disabled' }} name='email' id='email' type='email' value='{{ App.Users.userData.email|e('html_attr') }}' />
       </div>
       <hr>
 
@@ -366,13 +366,13 @@
   <div class='pl-3 mt-2 mb-5' id='ucp-account-form'>
     <div class='d-flex justify-content-between'>
       <label for='firstname' class='col-form-label'>{{ 'Firstname'|trans }}</label>
-      <input class='form-control col-md-3' type='text' id='firstname' name='firstname' value='{{ App.Users.userData.firstname|e('html_attr') }}' />
+      <input class='form-control col-md-3' {{ App.Config.configArr.allow_users_change_identity == '0' ? 'disabled' }} type='text' id='firstname' name='firstname' value='{{ App.Users.userData.firstname|e('html_attr') }}' />
     </div>
     <hr>
 
     <div class='d-flex justify-content-between'>
       <label for='lastname' class='col-form-label'>{{ 'Lastname'|trans }}</label>
-      <input class='form-control col-md-3' type='text' id='lastname' name='lastname' value='{{ App.Users.userData.lastname|e('html_attr') }}' />
+      <input class='form-control col-md-3' {{ App.Config.configArr.allow_users_change_identity == '0' ? 'disabled' }} type='text' id='lastname' name='lastname' value='{{ App.Users.userData.lastname|e('html_attr') }}' />
     </div>
     <hr>
 
