remove the input prepend on mfa input as it doesn't play well on medium
sized screens. Also increase spacing of the characters in the input.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1296,6 +1296,10 @@ input[type='color'] {
   padding: 0.25rem;
 }
 
+.increased-spacing {
+  letter-spacing: 0.1rem;
+}
+
 
 /* give the togglePassword some borders like input */
 .input-border {
