--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -214,6 +214,7 @@
     <table id='teamsTable' class='table' aria-describedby='teamsSectionTitle' data-table-sort='true'>
       <thead>
         <tr>
+          <th scope='col'>{{ 'ID'|trans }}</th>
           <th scope='col'>{{ 'Name'|trans }}</th>
           <th scope='col'>{{ 'Organisation ID'|trans }}</th>
           <th scope='col'>{{ 'Creation date'|trans }}</th>
@@ -225,6 +226,7 @@
         {% for team in teamsArr %}
           {% set count = Teams.getStats(team.id) %}
           <tr>
+            <td>{{ team.id }}</td>
             <td><span class='hl-hover-gray p-1 rounded malleableColumn' data-endpoint='teams' data-id='{{ team.id }}' data-target='name'>{{ team.name }}</span>
               <p class='smallgray p-1'>{{ 'Members'|trans }}: {{ count.totusers }} &ndash;
               {% trans %}
