--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -133,6 +133,8 @@
               <a class='dropdown-item' href='ucp.php?tab=3'><i class='fas fa-layer-group fa-fw'></i> {{ 'Templates'|trans }}</a>
               <a class='dropdown-item' href='profile.php'><i class='fas fa-user fa-fw'></i> {{ 'My profile'|trans }}</a>
               <a class='dropdown-item' data-action='toggle-todolist' href='#'><i class='fas fa-list fa-fw'></i> {{ 'Todolist'|trans }}</a>
+              <a class='dropdown-item' href='profile.php?tab=3'><i class='fas fa-file-arrow-up fa-fw'></i> {{ 'Import'|trans }}</a>
+              <a class='dropdown-item' href='profile.php?tab=4'><i class='fas fa-file-arrow-down fa-fw'></i> {{ 'Export'|trans }}</a>
               <a class='dropdown-item' href='ucp.php'><i class='fas fa-cogs fa-fw'></i> {{ 'Settings'|trans }}</a>
               {% if App.Users.isAdmin %}
                 <a class='dropdown-item' href='admin.php'><i class='fas fa-tools fa-fw'></i> {{ 'Admin panel'|trans }}</a>
