fix toggle main text in edit mode
and remove useless data-target on reset user password in edit users

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -167,7 +167,8 @@
                 <td data-label='2FA'>{% if user.has_mfa_enabled %}<span title='{{ '2FA enabled'|trans }}'><i title='{{ '2FA enabled'|trans }}' class='fas fa-user-shield'></i></span>{% endif %}</td>
                 <td data-label='{{ 'Actions'|trans }}'>
                   {% if App.Users.userData.is_sysadmin == '1' %}
-                    <button class='btn p-2 hl-hover-gray text-center mr-1' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
+                    {# TODO have a modal window for this #}
+                    <button class='btn p-2 hl-hover-gray text-center mr-1' title='{{ 'Reset user password'|trans }}' data-action='toggle-next'>
                       <i class='fas fa-fw fa-key'></i>
                     </button>
                     <div hidden class='input-group'>
