--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -167,7 +167,7 @@
             <input class='form-check-input' type='radio' name='entity_type' id='entityTypeRadioItems' value='items'>
             <label class='form-check-label' for='entityTypeRadioItems'>{{ 'Resources'|trans }}</label>
           </div>
-          <span id='onlyElnOptions'>
+          <div class='d-inline' id='onlyElnOptions'>
             <div class='form-check form-check-inline'>
               <input class='form-check-input' type='radio' name='entity_type' id='entityTypeRadioTemplates' value='experiments_templates'>
               <label class='form-check-label' for='entityTypeRadioTemplates'>{{ 'Templates'|trans }}</label>
@@ -176,7 +176,7 @@
               <input class='form-check-input' type='radio' name='entity_type' id='entityTypeRadioItemsTypes' value='items_types'>
               <label class='form-check-label' for='entityTypeRadioItemsTypes'>{{ 'Resources Categories'|trans }}</label>
             </div>
-          </span>
+          </div>
         </div>
 
         <div id='selectCategoryDiv'>
