fix the format metadata test -_-'
and remove some whitespaces from html output in lang select modal

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -60,7 +60,7 @@
         <select class='form-control' id='langSelect'>
           {% for lang, text in langsArr|sort %}
             <option value='{{ lang }}'
-            {{ App.getLang() == lang ? ' selected' }}
+            {{- App.getLang() == lang ? ' selected' -}}
             >{{ text }}</option>
           {% endfor %}
         </select>
