--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -150,7 +150,6 @@
     {% include 'binary-setting.html' with {'label': 'Admins can create local accounts'|trans, 'slug': 'admins_create_users'} %}
     {% include 'binary-setting.html' with {'label': 'Allow Admins to add existing users to their team'|trans, 'slug': 'admins_import_users'} %}
     {% include 'binary-setting.html' with {'label': 'Allow Admins to archive users'|trans, 'slug': 'admins_archive_users'} %}
-    {% include 'binary-setting.html' with {'label': 'Trust imported files about data ownership and dates'|trans, 'help': 'Allows users to import experiments under the identity stated in the file, creating missing users (if allowed).'|trans, 'slug': 'trust_imported_archives'} %}
 
     {% include 'binary-setting.html' with {'label': 'Show local login form'|trans, 'slug': 'local_login', 'help': 'You can still show the local login form by appending ?letmein to the login page URL.'|trans} %}
 
@@ -214,6 +213,7 @@
     <table id='teamsTable' class='table' aria-describedby='teamsSectionTitle' data-table-sort='true'>
       <thead>
         <tr>
+          <th scope='col'>{{ 'ID'|trans }}</th>
           <th scope='col'>{{ 'Name'|trans }}</th>
           <th scope='col'>{{ 'Organisation ID'|trans }}</th>
           <th scope='col'>{{ 'Creation date'|trans }}</th>
@@ -225,6 +225,7 @@
         {% for team in teamsArr %}
           {% set count = Teams.getStats(team.id) %}
           <tr>
+            <td>{{ team.id }}</td>
             <td><span class='hl-hover-gray p-1 rounded malleableColumn' data-endpoint='teams' data-id='{{ team.id }}' data-target='name'>{{ team.name }}</span>
               <p class='smallgray p-1'>{{ 'Members'|trans }}: {{ count.totusers }} &ndash;
               {% trans %}
